<resources>
    <string name="app_name">DiceSmartResto</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_pesanan">Pesanan</string>
    <string name="title_scan">Scan</string>
    <string name="title_saldo">Saldo</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>