<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.diceofficial.dicesmartresto.ui.beranda.BerandaFragment"
        android:label="@string/title_beranda"
        tools:layout="@layout/fragment_beranda" />

    <fragment
        android:id="@+id/navigation_pesanan"
        android:name="com.diceofficial.dicesmartresto.ui.pesanan.PesananFragment"
        android:label="@string/title_pesanan"
        tools:layout="@layout/fragment_pesanan" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.diceofficial.dicesmartresto.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_saldo"
        android:name="com.diceofficial.dicesmartresto.ui.saldo.SaldoFragment"
        android:label="@string/title_saldo"
        tools:layout="@layout/fragment_saldo" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.diceofficial.dicesmartresto.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>